[package]
name = "mqtt311"
version = "0.1.4"
authors = ["Ravi Teja <k.teza1@gmail.com>"]
description = "Mqtt3 is a crate to read/write MQTT-packet from/to a stream."
repository = "https://github.com/tekjar/mqtt311"
license = "MIT"

[dependencies]
byteorder = "0.4"
failure = "0.1"
derive_more = "0.13"
