[package]
name = "mqtt311"
version = "0.2.0"
authors = ["Ravi Teja <mail@raviteja.tech>"]
description = "Mqtt3 is a crate to read/write MQTT-packet from/to a stream."
repository = "https://github.com/tekjar/mqtt311"
license = "MIT"

[dependencies]
byteorder = "1"
failure = "0.1"
derive_more = "0.13"
